fixed error with nav bar and sticker overlapping

--- a/rccgb-site/styles.css
+++ b/rccgb-site/styles.css
@@ -98,12 +98,13 @@
   animation: ticker-move 5s linear infinite;
   overflow: hidden;
   white-space: nowrap;
-  padding-left: 50px;
+  padding-left: 90px;
   padding-right: 40px;
   border-color: #eeeeeb;
 }
 #woodathon-sticker::after {
   content: "Woodathon 2025: Book Now";
+  margin-left: 30px;
   color: #eeeeeb;
   font-weight: bold;
   font-size: 1rem;
